--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
 body{
+  margin: 0;
+  padding: 0;
   max-width: 100vw;
-  overflow-y: hidden;
-  background-color: aliceblue;
-  @media (max-width: 767px){
-    overflow-y: visible;
-  }
+  overflow-y: auto;
+  background-color: whitesmoke;
+}
+
+::-webkit-scrollbar{
+  width: 0.25rem;
+  height: 0.25rem;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb{
+  background: linear-gradient(transparent, #008373);
+  border-radius: 0.25rem;
 }
