--- a/src/assets/css/error.module.css
+++ b/src/assets/css/error.module.css
@@ -1,4 +1,4 @@
-.error-image {
+.errorImage {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -7,12 +7,12 @@
     position: relative;
 }
 
-.error-image img {
+.errorImage img {
     max-width: 30rem;
     width: 100%;
 }
 
-.error-image h3 {
+.errorImage h3 {
     text-align: center;
     position: absolute;
     top: 50%; 
