--- a/src/assets/css/navbar.module.css
+++ b/src/assets/css/navbar.module.css
@@ -6,7 +6,7 @@ nav {
     padding: 10px 20px;
 }
 
-.navbar-container {
+.navbarContainer {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -26,7 +26,7 @@ nav {
     }
 }
 
-.navbar-items {
+.navbarItems {
     display: flex;
     gap: 50px; 
 }
