--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@ body{
   background-color: whitesmoke;
 }
 
+section{
+  height: 100vh;
+  width: 100vw;
+}
+
 ::-webkit-scrollbar{
   width: 0.25rem;
   height: 0.25rem;
