--- a/src/assets/css/error.module.css
+++ b/src/assets/css/error.module.css
@@ -1,10 +1,8 @@
 .errorImage {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .errorImage img {
