--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@ section{
 }
 
 ::-webkit-scrollbar{
-  width: 0.25rem;
-  height: 0.25rem;
+  width: 0;
+  height: 0;
   background: transparent;
 }
 
