--- a/src/assets/css/Footer.module.css
+++ b/src/assets/css/Footer.module.css
@@ -1,10 +1,14 @@
 .footerContainer {
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: lightgray;
-    padding: 20px;
+    padding: 5px;
     z-index: 1000;
+    text-align: center;
 }
 
 .socialIcons {
