--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html{
+  scroll-snap-type: y mandatory;
+}
+
 body{
   margin: 0;
   padding: 0;
@@ -9,6 +13,7 @@ body{
 section{
   height: 100vh;
   width: 100vw;
+  scroll-snap-align: start;
 }
 
 ::-webkit-scrollbar{
