--- a/src/assets/css/navbar.module.css
+++ b/src/assets/css/navbar.module.css
@@ -3,9 +3,9 @@ nav {
     top: 0;
     width: 100vw;
     background-color: #008373;
-    color: #fff;
     display: flex;
     align-items: center;
+    z-index: 1000;
 }
 
 .navbarContainer {
