--- a/src/assets/css/cargando.module.css
+++ b/src/assets/css/cargando.module.css
@@ -1,15 +1,15 @@
-.cargando {
-    position: fixed;
-    top: 0;
-    left: 0;
+.carga{
     width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 100vh;
+}
+
+.cargando {
+    display: grid;
+    place-items: center;
     background-color: #008373;
     opacity: 0.8;
     transition: opacity 0.5s;
+    height: 100vh;
     z-index: 1001;
 }
 .cargando.visible {
@@ -19,7 +19,7 @@
     opacity: 0;
     pointer-events: none;
 }
-img {
-    max-width: 100%;
-    max-height: 100%;
+.imagen {
+    width: 100vw;
+    height: auto;
 }
