--- a/src/assets/css/Footer.module.css
+++ b/src/assets/css/Footer.module.css
@@ -25,3 +25,9 @@
     margin: 0;
     color: black !important;
 }
+
+@media (max-width: 768px) {
+    .contentContainer p{
+        font-size: 0.8rem;
+    }
+}
